--- a/client/imports/app/patient/view.component.html
+++ b/client/imports/app/patient/view.component.html
@@ -4,7 +4,7 @@
       <ion-icon name="menu"></ion-icon> 
     </button>
     <div class="top_title">
-      PROFILE
+      Patient Profile
     </div>
   </ion-navbar>
 </ion-header>
@@ -42,7 +42,7 @@
            		<ion-grid>
                   <ion-row>
 						<div class="profile_contain">
-                        	<h2>Provider Details</h2>
+                        	<h2>Health Details</h2>
                             <!--<p class="name_p">Profile</p>
                             <p class="data_p">{{user.profile.firstName}} {{user.profile.lastName}}</p>
                              <p class="name_p">Phone no.</p>
@@ -58,7 +58,7 @@
            		<ion-grid>
                   <ion-row>
 						<div class="profile_contain">
-                        	<h2>Pharmacy Detail</h2>
+                        	<h2>Visit Details</h2>
                             <!--<p class="name_p">Email</p>
                             <p class="data_p">{{user.emails[0].address}}</p>
                             <p class="name_p">Phone no.</p>
