patient details and list

--- a/client/imports/app/layout/navbar.component.html
+++ b/client/imports/app/layout/navbar.component.html
@@ -1,4 +1,4 @@
-<ul id="nav-mobile" class="side-nav left-bar fixed">
+<!--<ul id="nav-mobile" class="side-nav left-bar fixed">
     <li class="admin-pro">
     <img src="images/admin.png" alt=""/>
     <h2>{{user.profile.firstName}} {{user.profile.lastName}}</h2>
@@ -24,4 +24,4 @@
     <li class="bold"><a href="javascript:void(0);" class="waves-effect" [hidden]="!user" (click)="logout()">
         <i class="zmdi zmdi-lock"></i> Logout</a>
     </li>
-</ul>
+</ul>-->
