--- a/client/imports/app/patient/view.component.html
+++ b/client/imports/app/patient/view.component.html
@@ -1,16 +1,14 @@
 <ion-header class="profile_main_head">
-  <ion-navbar>
-    <button ion-button icon-only menuToggle>
-      <ion-icon name="menu"></ion-icon> 
-    </button>
-    <div class="top_title">
-      Patient Profile
-    </div>
-  </ion-navbar>
+	<ion-navbar>
+		<button ion-button icon-only menuToggle>
+			<ion-icon name="menu"></ion-icon> 
+		</button>
+		<div class="top_title"> Patient Profile </div>
+	</ion-navbar>
 </ion-header>
 
 <ion-content class="content1">
-   	<div class="main_pro_content">
+   	<div class="main_pro_content" *ngIf="patientData">
     	<ion-card class="first_main_con">
           <ion-card-content>
            		<ion-grid>
@@ -19,39 +17,67 @@
                         	<img src="/images/no-image-male.jpg" alt=""/>
                         </div>
                     	<div class="mid_con">
-                        	<h2>{{user.profile.firstName}} {{user.profile.lastName}}</h2>
-                            <p><img src="/assets/img/img1.png" alt=""/>{{user.profile.gender}}</p>
-                            <!--<p><img src="/assets/img/img2.png" alt=""/>{{user.profile.dob | age}} yrs</p>
-                            <p><ion-icon name="call"></ion-icon>{{user.profile.phoneNum}}</p>
-                            <p><img src="/assets/img/img4.png" alt=""/>{{user.profile.ssn}}</p>
-                            <p><ion-icon name="stopwatch"></ion-icon>{{user.profile.dob | date}}</p>-->
+                        	<h2>{{patientData.firstName}} {{patientData.lastName}}</h2>
+                            <p><img src="/assets/img/img1.png" alt=""/>{{patientData.gender | gender}}</p>
+                            <p><img src="/assets/img/img2.png" alt=""/>{{patientData.dob | age}} yrs</p>                            
+                            <p><ion-icon name="stopwatch"></ion-icon>{{patientData.dob | date}}</p>
+							<p><ion-icon name="briefcase"></ion-icon>{{patientData.occupation}}</p>
                         </div>
                     	<div class="button_s">
                             <ion-fab right edge>
                                 <button ion-fab mini class="edit"><ion-icon name="create"></ion-icon></button>
-                                 <button ion-fab mini class="lock"><ion-icon name="unlock"></ion-icon></button>
                             </ion-fab>
                         </div>
                   </ion-row>
 				</ion-grid>
           </ion-card-content>
-    </ion-card>
+		</ion-card>
+		
+		<ion-card class="first_main_con">
+			  <ion-card-content>
+					<ion-grid>
+					  <ion-row>
+							<div class="profile_contain">
+								<h2>Contact Details</h2>
+								<ion-row>
+								<ion-col width-50>
+									<p class="name_p">Email:</p> <p class="data_p">{{patientData.email}}</p>
+									<p class="name_p">Phone:</p> <p class="data_p">{{patientData.phonenumber}}</p>
+								</ion-col>
+								<ion-col width-50>
+									<p class="name_p">Address:</p>
+									<p class="data_p">{{patientData.address}}</p>
+									<p class="data_p">{{patientData.city}}  {{patientData.pincode}}</p>
+									
+								</ion-col>
+								</ion-row>
+							</div>
+					  </ion-row>
+					</ion-grid>
+			  </ion-card-content>
+		</ion-card>
     
-    <ion-card class="first_main_con">
-          <ion-card-content>
-           		<ion-grid>
-                  <ion-row>
-						<div class="profile_contain">
-                        	<h2>Health Details</h2>
-                            <!--<p class="name_p">Profile</p>
-                            <p class="data_p">{{user.profile.firstName}} {{user.profile.lastName}}</p>
-                             <p class="name_p">Phone no.</p>
-                            <p class="data_p">{{user.profile.phoneNum}}</p>-->
-                        </div>
-                  </ion-row>
-				</ion-grid>
-          </ion-card-content>
-    </ion-card>
+		<ion-card class="first_main_con">
+			  <ion-card-content>
+					<ion-grid>
+					  <ion-row>
+							<div class="profile_contain">
+								<h2>Health Details</h2>
+								<ion-row>
+									<ion-col width-50>
+										<p class="name_p">Height:</p>
+										<p class="data_p">{{patientData.height}} cm</p>
+									</ion-col>
+									<ion-col width-50>
+										<p class="name_p">Weight:</p>
+										<p class="data_p">{{patientData.weight}} kg</p>
+									</ion-col>
+								</ion-row>
+							</div>
+					  </ion-row>
+					</ion-grid>
+			  </ion-card-content>
+		</ion-card>
     
         <ion-card class="first_main_con">
           <ion-card-content>
@@ -59,17 +85,12 @@
                   <ion-row>
 						<div class="profile_contain">
                         	<h2>Visit Details</h2>
-                            <!--<p class="name_p">Email</p>
-                            <p class="data_p">{{user.emails[0].address}}</p>
-                            <p class="name_p">Phone no.</p>
-                            <p class="data_p">{{user.profile.phoneNum}}</p>
-                            <p class="name_p">Address</p>
-                            <p class="data_p">{{user.profile.address}} {{user.profile.city}}, {{user.profile.state}} {{user.profile.zip}}</p>-->
+                            
                         </div>
                   </ion-row>
 				</ion-grid>
           </ion-card-content>
-    </ion-card>
+		</ion-card>
     
     </div>
 </ion-content>
