--- a/client/imports/app/practitioner/details.component.html
+++ b/client/imports/app/practitioner/details.component.html
@@ -1,75 +1,51 @@
 <ion-header class="profile_main_head">
-  <ion-navbar>
-    <button ion-button icon-only menuToggle>
-      <ion-icon name="menu"></ion-icon> 
-    </button>
-    <div class="top_title">
-      PROFILE
-    </div>
-  </ion-navbar>
+	<ion-navbar>
+		<button ion-button icon-only menuToggle>
+			<ion-icon name="menu"></ion-icon> 
+		</button>
+		<div class="top_title"> PROFILE </div>
+	</ion-navbar>
 </ion-header>
 
 <ion-content class="content1">
    	<div class="main_pro_content">
     	<ion-card class="first_main_con">
-          <ion-card-content>
-           		<ion-grid>
-                  <ion-row>
-                    	<div class="profile_pic">
-                        	<img src="/images/no-image-male.jpg" alt=""/>
-                        </div>
-                    	<div class="mid_con">
-                        	<h2>{{user.profile.firstName}} {{user.profile.lastName}}</h2>
-                            <p><img src="/assets/img/img1.png" alt=""/>{{user.profile.gender}}</p>
-                            <!--<p><img src="/assets/img/img2.png" alt=""/>{{user.profile.dob | age}} yrs</p>
-                            <p><ion-icon name="call"></ion-icon>{{user.profile.phoneNum}}</p>
-                            <p><img src="/assets/img/img4.png" alt=""/>{{user.profile.ssn}}</p>
-                            <p><ion-icon name="stopwatch"></ion-icon>{{user.profile.dob | date}}</p>-->
-                        </div>
-                    	<div class="button_s">
-                            <ion-fab right edge>
-                                <button ion-fab mini class="edit"><ion-icon name="create"></ion-icon></button>
-                                 <button ion-fab mini class="lock"><ion-icon name="unlock"></ion-icon></button>
-                            </ion-fab>
-                        </div>
-                  </ion-row>
+			<ion-card-content>
+				<ion-grid>
+					<ion-row>
+							<div class="profile_pic">
+								<img src="/images/no-image-male.jpg" alt=""/>
+							</div>
+							<div class="mid_con">
+								<h2>{{user.profile.firstName}} {{user.profile.lastName}}</h2>
+								<p>{{user.emails[0].address}}</p>
+								<!--<p><img src="/assets/img/img2.png" alt=""/>{{user.profile.dob | age}} yrs</p>
+								<p><ion-icon name="call"></ion-icon>{{user.profile.phoneNum}}</p>
+								<p><img src="/assets/img/img4.png" alt=""/>{{user.profile.ssn}}</p>
+								<p><ion-icon name="stopwatch"></ion-icon>{{user.profile.dob | date}}</p>-->
+							</div>
+							<div class="button_s">
+								<ion-fab right edge>
+									<button ion-fab mini class="edit"><ion-icon name="create"></ion-icon></button>
+									<button ion-fab mini class="lock"><ion-icon name="unlock"></ion-icon></button>
+								</ion-fab>
+							</div>
+					</ion-row>
 				</ion-grid>
-          </ion-card-content>
-    </ion-card>
+			</ion-card-content>
+		</ion-card>
     
-    <ion-card class="first_main_con">
-          <ion-card-content>
-           		<ion-grid>
-                  <ion-row>
+		<ion-card class="first_main_con">
+			<ion-card-content>
+				<ion-grid>
+					<ion-row>
 						<div class="profile_contain">
-                        	<h2>Provider Details</h2>
-                            <!--<p class="name_p">Profile</p>
-                            <p class="data_p">{{user.profile.firstName}} {{user.profile.lastName}}</p>
-                             <p class="name_p">Phone no.</p>
-                            <p class="data_p">{{user.profile.phoneNum}}</p>-->
-                        </div>
-                  </ion-row>
+							<h2>App Subcription Detail</h2>
+							
+						</div>
+					</ion-row>
 				</ion-grid>
-          </ion-card-content>
-    </ion-card>
-    
-        <ion-card class="first_main_con">
-          <ion-card-content>
-           		<ion-grid>
-                  <ion-row>
-						<div class="profile_contain">
-                        	<h2>Pharmacy Detail</h2>
-                            <!--<p class="name_p">Email</p>
-                            <p class="data_p">{{user.emails[0].address}}</p>
-                            <p class="name_p">Phone no.</p>
-                            <p class="data_p">{{user.profile.phoneNum}}</p>
-                            <p class="name_p">Address</p>
-                            <p class="data_p">{{user.profile.address}} {{user.profile.city}}, {{user.profile.state}} {{user.profile.zip}}</p>-->
-                        </div>
-                  </ion-row>
-				</ion-grid>
-          </ion-card-content>
-    </ion-card>
-    
+			</ion-card-content>
+		</ion-card>
     </div>
 </ion-content>
