draw dots and undo dots

--- a/client/imports/app/analysis/postureImage.component.html
+++ b/client/imports/app/analysis/postureImage.component.html
@@ -18,9 +18,8 @@
 				  ></canvas>
 		</div>
 		<div class="m-signature-pad--footer">
-			<button class="button" data-action="clear" (click)="removePostureGrid()">Clear</button>
-			<button class="button" data-action="save" (click)="drawPostureGrid()">Next</button>
-			<button class="button" data-action="save" (click)="drawUndo()">Undo</button>
+			<button class="button clear" data-action="clear" (click)="removePostureGrid()">Prev</button>
+			<button class="button save" data-action="save" (click)="drawPostureGrid()">Next</button>
 		</div>
     </div>
 </ion-content>
