--- a/client/imports/app/analysis/posture.component.html
+++ b/client/imports/app/analysis/posture.component.html
@@ -13,14 +13,14 @@
     <div class="main_pro_content">
 		<div class="m-signature-pad--body" style="border: 1px solid red; width: 100%; height: 80%;">
 		  <canvas id="postureCanvas" style="background-image:url('images/man.jpg')"
-				  (click)="draw($event)"
+				  (click)="drawDots($event)"
 				  width="480" height="450"
 				  ></canvas>
 		</div>
 		<div class="m-signature-pad--footer">
 			<button class="button" data-action="clear" (click)="removePostureGrid()">Clear</button>
-			<button class="button" data-action="save" (click)="drawPostureGrid()">Next</button>
-			<button class="button" data-action="save" (click)="drawUndo()">Undo</button>
+			<button class="button" data-action="save" (click)="drawPostureGrid()" *ngIf="drawGrid">drawGrid</button>
+			<button class="button" data-action="save" (click)="drawUndo()" *ngIf="restorePoints && restorePoints.length>0">Undo</button>
 		</div>
     </div>
 </ion-content>
