--- a/client/imports/app/analysis/posture.component.html
+++ b/client/imports/app/analysis/posture.component.html
@@ -28,7 +28,7 @@
 					
 					<ion-row>
 						<ion-col>
-							<button class="button" (click)="zoomGrid()">Zoom In</button>
+							<button class="button" (click)="zoomIn()">Zoom In</button>
 							<button class="button" (click)="zoomOut()">Zoom Out</button>
 						</ion-col>
 					</ion-row>
