changes in picture upload to select patient first then upload

--- a/client/imports/app/patient/details.component.html
+++ b/client/imports/app/patient/details.component.html
@@ -53,7 +53,10 @@
 									</button>
 									<button ion-fab mini class="edit" (click)="addAppointment(patientList._id)">
 										<ion-icon name="book"></ion-icon>
-									</button>				
+									</button>
+									<button ion-fab mini class="edit" (click)="uploadPicture(patientList._id)">
+										<ion-icon name="camera"></ion-icon>
+									</button>
 								<!--</ion-fab>-->
 							</div>
 						</ion-row>
